added sign in and sign up

--- a/html and css files/about.html
+++ b/html and css files/about.html
@@ -14,16 +14,16 @@
 
           <div class="nav-links-Wrap">
             <ul>
-              <li><a href="index.html">Home</a></li>
+              <li><a href="../index.html">Home</a></li>
               <li><a href="about.html">About</a></li>
               <li><a href="contact.html">Contact</a></li>
               <li><a href="FAQ.html">FAQ</a></li>
             </ul>
 
             <ul class="signin-upwrap">
-              <li><a href="signInVendor.html">sign in</a></li>
+              <li><a href="signInWelcome.html">sign in</a></li>
               |
-              <li><a href="">sign up</a></li>
+              <li><a href="signUpWelcome.html">sign up</a></li>
             </ul>
           </div>
         </nav>
@@ -106,6 +106,8 @@
             dedication and enthusiasm
           </p>
         </div>
+        <!-- our Team -->
+        <div class="ourTeam"></div>
       </main>
       <!-- footer starts here -->
       <footer>
