--- a/html and css files/signInCustomer.html
+++ b/html and css files/signInCustomer.html
@@ -21,9 +21,7 @@
       <main>
         <div class="welcomeBack">
           <h1>Welcome Back</h1>
-          <p>
-            Continue where you left off - log in to your event planner account.
-          </p>
+          <p>Stay connected with your favorite vendors - sign in now.</p>
         </div>
         <!-- fORM SECTION -->
 
