--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0 , user-scalable = no" />
     <title>Cadence||Connect</title>
     <link rel="stylesheet" href="./html and css files/style.css" />
   </head>
@@ -21,9 +21,9 @@
             </ul>
 
             <ul class="signin-upwrap">
-              <li><a href="signInVendor.html">sign in</a></li>
+              <li><a href="./html and css files/signInWelcome.html">sign in</a></li>
               |
-              <li><a href="">sign up</a></li>
+              <li><a href="./html and css files/signUpWelcome.html">sign up</a></li>
             </ul>
           </div>
         </nav>
@@ -131,7 +131,7 @@
             <article>
               <figure>
                 <img
-                  src="./EMS assets/EmsPic- cultural and Religious.jfif"
+                  src="./EMS assets/emsPic-Wedding.jfif"
                   alt=""
                 />
               </figure>
@@ -145,7 +145,7 @@
             <article>
               <figure>
                 <img
-                  src="./EMS assets/EmsPic- cultural and Religious.jfif"
+                  src="./EMS assets/EmsPic-CoporateEvent.jfif"
                   alt=""
                 />
               </figure>
@@ -173,7 +173,7 @@
             <article>
               <figure>
                 <img
-                  src="./EMS assets/EmsPic- cultural and Religious.jfif"
+                  src="./EMS assets/EmsPic-CoporateEvent.jfif"
                   alt=""
                 />
               </figure>
@@ -187,7 +187,7 @@
             <article>
               <figure>
                 <img
-                  src="./EMS assets/EmsPic- cultural and Religious.jfif"
+                  src="./EMS assets/EmsPic-FootballEvent.jfif"
                   alt=""
                 />
               </figure>
@@ -198,7 +198,7 @@
             </article>
           </li>
         </ul>
-        <!-- section of mainBelowHero -->
+        <!-- section two of mainBelowHero -->
         <div class="event-cards">
           <!--  -->
       <article>
