--- a/html and css files/vendorDashboard.html
+++ b/html and css files/vendorDashboard.html
@@ -21,7 +21,7 @@
             </ul>
 
             <ul class="signin-upwrap">
-              <li><a href="index.html">log out</a></li>
+              <li><a href="../index.html">log out</a></li>
               |
               <li><a href="">Dashboard</a></li>
             </ul>
