added another js validate file for sign in

--- a/html and css files/signInCustomer.html
+++ b/html and css files/signInCustomer.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="signIn.css" />
+    <link rel="stylesheet" href="signInCustomer.css" />
 
     <title>Cadence || Connect</title>
   </head>
@@ -69,6 +69,6 @@
       </main>
       <!--  -->
     </div>
-    <!-- <script type="module" src="./jsfiles/formCheck.js"></script> -->
+    <script type="module" src="./jsfiles/signInValidation.js"></script>
   </body>
 </html>
