--- a/html and css files/signInVendor.html
+++ b/html and css files/signInVendor.html
@@ -71,6 +71,6 @@
       </main>
       <!--  -->
     </div>
-    <!-- <script type="module" src="./jsfiles/formCheck.js"></script> -->
+    <script type="module" src="./jsfiles/signInValidation.js"></script>
   </body>
 </html>
