Image for hero section backgrounde reduced

--- a/html and css files/signInCustomer.html
+++ b/html and css files/signInCustomer.html
@@ -43,7 +43,7 @@
                 id="password"
                 required
               />
-              <p>Forget password?</p>
+              <p>Forgot password?</p>
             </div>
             <div class="iconWrapper">
               <figure>
