--- a/html and css files/customerSignUp.html
+++ b/html and css files/customerSignUp.html
@@ -95,6 +95,6 @@
 
       <!--  -->
     </div>
-    <script type="module" src="./jsfiles/formValidation.js"></script>
+    <script type="module" src="./jsfiles/customerSignUpValidation.js"></script>
   </body>
 </html>
