--- a/html and css files/signInWelcome.html
+++ b/html and css files/signInWelcome.html
@@ -11,14 +11,19 @@
     <div class="container">
       <!-- HEADER SECTION -->
       <main>
-        <div class="welcomeText">
+        <div>
           <figure class="backArrow">
             <a href="../index.html">
               <img src="../EMS assets/backArrow.svg" alt=""
             /></a>
           </figure>
 
-          <h1 class="welcome">Welcome</h1>
+          <div class="welcomeback">
+            <h1 class="welcome">Welcome back</h1>
+            <figure>
+              <img src="../EMS assets/emojione_waving-hand.svg" alt="" />
+            </figure>
+          </div>
           <p class="welcomeText">
             Welcome back to Cadence Connect!Ready to pick up where you left off?
             Sign in below to access your event planning dashboard or client
