--- a/html and css files/signUpVendor.html
+++ b/html and css files/signUpVendor.html
@@ -99,6 +99,6 @@
 
       <!--  -->
     </div>
-    <script type="module" src="./jsfiles/formCheck.js"></script>
+    <script type="module" src="./jsfiles/vendorSignUpValidation.js"></script>
   </body>
 </html>
