--- a/html and css files/signUpWelcome.html
+++ b/html and css files/signUpWelcome.html
@@ -11,15 +11,20 @@
     <div class="container">
       <!-- HEADER SECTION -->
       <main>
-        <div class="welcomeText">
+        <div>
           <figure class="backArrow">
             <a href="../index.html">
               <img src="../EMS assets/backArrow.svg" alt=""
             /></a>
           </figure>
 
-          <h1 class="welcome">Welcome</h1>
-          <p class="welcomeText">
+          <div class="welcomeback">
+            <h1 class="welcome">Welcome</h1>
+            <figure>
+              <img src="../EMS assets/emojione_waving-hand.svg" alt="" />
+            </figure>
+          </div>
+          <p class="welcomeText2">
             Welcome to Cadence Connect! Are you ready to bring your event
             visions to life? Choose your role below and let's get started on
             creating unforgettable experiences together.
