--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <div class="container">
       <div class="hero">
       <nav>
-        <h3>LOGO</h3>
+        <figure id="CadenceLogo">
+          <img src="./EMS assets/CADENCE CONNECT LOGO WHITE.png" alt="">
+        </figure>
 
           <div class="nav-links-Wrap">
             <ul>
@@ -726,7 +728,9 @@
       <img src="./EMS assets/bigPicFooter.svg" alt="">
      </figure>
      <div class="footerNotes">
-      <div class="footerLogo">logo</div>
+      <div class="footerLogo">
+        <img src="./EMS assets/CADENCE CONNECT LOGO WHITE.png" alt="">
+      </div>
       <!--  -->
       <ul>
         <li>About us</li>
