Addition of logged in pages

--- a/html and css files/clientLoggedIn.html
+++ b/html and css files/clientLoggedIn.html
@@ -16,17 +16,17 @@
 
           <div class="nav-links-Wrap">
             <ul>
-              <li><a href="vendorHomelink.html">Home</a></li>
-              <li><a href="./vendorAboutlink.html">About</a></li>
+              <li><a href="#">Home</a></li>
+              <li><a href="./clientLoggedInAbout.html">About</a></li>
               <li><a href="#">Contact</a></li>
               <li><a href="#">FAQ</a></li>
             </ul>
 
-            <ul class="signin-upwrap">
+            <!-- <ul class="signin-upwrap">
               <li><a href="../index.html">log out</a></li>
               |
               <li><a href="">Dashboard</a></li>
-            </ul>
+            </ul> -->
           </div>
         </nav>
         <div class="hero-main">
