--- a/html and css files/clientLoggedInAbout.html
+++ b/html and css files/clientLoggedInAbout.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cadence||Connect||About us</title>
-    <link rel="stylesheet" href="about.css" />
+    <link rel="stylesheet" href="vendorAbout.css" />
   </head>
   <body>
     <div class="container">
@@ -16,16 +16,10 @@
 
           <div class="nav-links-Wrap">
             <ul>
-              <li><a href="../index.html">Home</a></li>
-              <li><a href="about.html">About</a></li>
-              <li><a href="contact.html">Contact</a></li>
-              <li><a href="FAQ.html">FAQ</a></li>
-            </ul>
-
-            <ul class="signin-upwrap">
-              <li><a href="signInWelcome.html">sign in</a></li>
-              |
-              <li><a href="signUpWelcome.html">sign up</a></li>
+              <li><a href="./clientLoggedIn.html">Home</a></li>
+              <li><a href="#">About</a></li>
+              <li><a href="#">Contact</a></li>
+              <li><a href="#">FAQ</a></li>
             </ul>
           </div>
         </nav>
@@ -108,8 +102,6 @@
             dedication and enthusiasm
           </p>
         </div>
-        <!-- our Team -->
-        <div class="ourTeam"></div>
       </main>
       <!-- footer starts here -->
       <footer>
