--- a/html and css files/signUpRegisterVendor.html
+++ b/html and css files/signUpRegisterVendor.html
@@ -28,16 +28,33 @@
       <form action="">
         <div class="formWwrap">
           <div class="inputWrap">
-            <input type="text" name="" id="" placeholder="Business Name" />
-            <input type="text" placeholder="Business type/Category" />
-            <input type="number" name="" id="" placeholder="Business Contact" />
-            <input type="text" name="" id="" placeholder="Location" />
-            <input type="text" placeholder="Description of services offered" />
+            <input
+              type="text"
+              name=""
+              id=""
+              placeholder="Business Name"
+              required
+            />
+            <input type="text" placeholder="Business type/Category" required />
+            <input
+              type="number"
+              name=""
+              id=""
+              placeholder="Business Contact"
+              required
+            />
+            <input type="text" name="" id="" placeholder="Location" required />
+            <input
+              type="text"
+              placeholder="Description of services offered"
+              required
+            />
             <input
               type="text"
               name=""
               id=""
               placeholder="Corporate Affairs Commission(CAC) "
+              required
             />
           </div>
         </div>
@@ -49,5 +66,6 @@
 
       <!--  -->
     </div>
+    <script src="./jsfiles/vendorDetailsReg.js"></script>
   </body>
 </html>
