--- a/html and css files/vendorAboutlink.html
+++ b/html and css files/vendorAboutlink.html
@@ -11,7 +11,7 @@
       <div class="hero">
         <nav>
           <figure id="CadenceLogo">
-            <img src="../EMS assets/CADENCE CONNECT LOGO BLACK.png" alt="" />
+            <img src="../EMS assets/CADENCE CONNECT LOGO WHITE.png" alt="" />
           </figure>
 
           <div class="nav-links-Wrap">
@@ -23,7 +23,7 @@
             </ul>
 
             <ul class="signin-upwrap">
-              <li><a href="index.html">log out</a></li>
+              <li><a href="../index.html">log out</a></li>
               |
               <li><a href="">Dashboard</a></li>
             </ul>
