--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         </figure>
 
           <div class="nav-links-Wrap">
+          
             <ul>
               <li><a href="index.html">Home</a></li>
               <li><a href="./html and css files/about.html">About</a></li>
@@ -27,6 +28,10 @@
               |
               <li><a href="./html and css files/signUpWelcome.html">sign up</a></li>
             </ul>
+            <!-- hamburger Menu -->
+            <figure class="hamBug">
+              <img src="./EMS assets/menu.svg" alt="">
+            </figure>
           </div>
         </nav>
         <div class="hero-main">
