--- a/html and css files/signInWelcome.html
+++ b/html and css files/signInWelcome.html
@@ -31,7 +31,7 @@
           </p>
         </div>
         <div class="vendorClientWrap">
-          <a href="./signinVendor.html">Sign in as an Event Planner</a>
+          <a href="signInVendor.html">Sign in as an Event Planner</a>
           <a href="signInCustomer.html">Sign in as a Client</a>
         </div>
       </main>
