--- a/html and css files/chat.html
+++ b/html and css files/chat.html
@@ -8,24 +8,39 @@
   </head>
   <body>
     <div class="container">
-      <div>
-        <figure><img src="../EMS assets/profilePic.jfif" alt="" /></figure>
-        <figure><img src="../EMS assets//chatIConHome.svg" alt="" /></figure>
-        <figure>
+      <aside>
+        <figure class="profileImg">
+          <img src="../EMS assets/profilePic.jfif" alt="" />
+        </figure>
+        <figure class="homeIcon">
+          <img src="../EMS assets//chatIConHome.svg" alt="" />
+        </figure>
+        <figure class="notifyIcon">
           <img src="../EMS assets/chatIConNotification.svg" alt="" />
         </figure>
-        <figure><img src="../EMS assets/chatIconMessage.svg" alt="" /></figure>
-        <figure><img src="../EMS assets/chatIconSettings.svg" alt="" /></figure>
-      </div>
+        <figure class="messageIcon">
+          <img src="../EMS assets/chatIconMessage.svg" alt="" />
+        </figure>
+        <figure class="settingsIcon">
+          <img src="../EMS assets/chatIconSettings.svg" alt="" />
+        </figure>
+      </aside>
+      <!--  -->
       <div>
         <form action="">
           <h1>Event Details Form</h1>
-          <label for="">Event Name</label>
-          <input type="text" placeholder="" />
-          <label for="">Event Date and Time</label>
-          <input type="date" name="" id="" />
-          <label for="">Event Location</label>
-          <input type="text" />
+          <div>
+            <label for="">Event Name</label>
+            <input type="text" placeholder="" />
+          </div>
+          <div>
+            <label for="">Event Date and Time</label>
+            <input type="date" name="" id="" />
+          </div>
+          <div>
+            <label for="">Event Location</label>
+            <input type="text" />
+          </div>
         </form>
       </div>
     </div>
