--- a/html and css files/clientLoggedIn.html
+++ b/html and css files/clientLoggedIn.html
@@ -222,7 +222,7 @@
             </figure>
             <div class="eleg-star">
               <div class="eleg-star-rate">
-                <h3>Elegant weddings Co.</h3>
+                <a href="./vendorDashboard2.html">Elegant weddings Co.</a>
                 <figure class="elegstarFig">
                   <img src="../EMS assets/veeerifygreen.svg" alt="" />
                 </figure>
@@ -239,10 +239,6 @@
             </p>
             <span class="viewMore">view more</span>
           </article>
-
-          <!--  -->
-
-          <!--  -->
           <article>
             <figure>
               <img
@@ -253,7 +249,7 @@
             </figure>
             <div class="eleg-star">
               <div class="eleg-star-rate">
-                <h3>Elegant weddings Co.</h3>
+                <a href="./vendorDashboard2.html">Elegant weddings Co.</a>
                 <figure class="elegstarFig">
                   <img src="../EMS assets/veeerifygreen.svg" alt="" />
                 </figure>
@@ -270,10 +266,6 @@
             </p>
             <span class="viewMore">view more</span>
           </article>
-
-          <!--  -->
-
-          <!--  -->
           <article>
             <figure>
               <img
@@ -284,7 +276,7 @@
             </figure>
             <div class="eleg-star">
               <div class="eleg-star-rate">
-                <h3>Elegant weddings Co.</h3>
+                <a href="./vendorDashboard2.html">Elegant weddings Co.</a>
                 <figure class="elegstarFig">
                   <img src="../EMS assets/veeerifygreen.svg" alt="" />
                 </figure>
@@ -305,95 +297,9 @@
           <!--  -->
 
           <!--  -->
-          <article>
-            <figure>
-              <img
-                src="../EMS assets/repeated-pic EMS.jfif"
-                class="ScaleiImg"
-                alt=""
-              />
-            </figure>
-            <div class="eleg-star">
-              <div class="eleg-star-rate">
-                <h3>Elegant weddings Co.</h3>
-                <figure class="elegstarFig">
-                  <img src="../EMS assets/veeerifygreen.svg" alt="" />
-                </figure>
-
-                <figure class="starred5">
-                  <p>(5.0)</p>
-                  <img src="../EMS assets/rateStar.svg" alt="" />
-                </figure>
-              </div>
-            </div>
-            <p class="category-weddingTxt">
-              Specializes in crafting exquisite weddings tailored to your style
-              and vision. From intimate ceremonies to lavish receptions...
-            </p>
-            <span class="viewMore">view more</span>
-          </article>
-
           <!--  -->
 
           <!--  -->
-          <article>
-            <figure>
-              <img
-                src="../EMS assets/repeated-pic EMS.jfif"
-                class="ScaleiImg"
-                alt=""
-              />
-            </figure>
-            <div class="eleg-star">
-              <div class="eleg-star-rate">
-                <h3>Elegant weddings Co.</h3>
-                <figure class="elegstarFig">
-                  <img src="../EMS assets/veeerifygreen.svg" alt="" />
-                </figure>
-
-                <figure class="starred5">
-                  <p>(5.0)</p>
-                  <img src="../EMS assets/rateStar.svg" alt="" />
-                </figure>
-              </div>
-            </div>
-            <p class="category-weddingTxt">
-              Specializes in crafting exquisite weddings tailored to your style
-              and vision. From intimate ceremonies to lavish receptions...
-            </p>
-            <span class="viewMore">view more</span>
-          </article>
-
-          <!--  -->
-
-          <!--  -->
-          <article>
-            <figure>
-              <img
-                src="../EMS assets/repeated-pic EMS.jfif"
-                class="ScaleiImg"
-                alt=""
-              />
-            </figure>
-            <div class="eleg-star">
-              <div class="eleg-star-rate">
-                <h3>Elegant weddings Co.</h3>
-                <figure class="elegstarFig">
-                  <img src="../EMS assets/veeerifygreen.svg" alt="" />
-                </figure>
-
-                <figure class="starred5">
-                  <p>(5.0)</p>
-                  <img src="../EMS assets/rateStar.svg" alt="" />
-                </figure>
-              </div>
-            </div>
-            <p class="category-weddingTxt">
-              Specializes in crafting exquisite weddings tailored to your style
-              and vision. From intimate ceremonies to lavish receptions...
-            </p>
-            <span class="viewMore">view more</span>
-          </article>
 
           <!--  -->
         </div>
