--- a/html and css files/signInCustomer.html
+++ b/html and css files/signInCustomer.html
@@ -43,6 +43,7 @@
                 id="password"
                 required
               />
+              <span class="togglepwd">&#x1f441;</span>
               <p>Forgot password?</p>
             </div>
             <div class="iconWrapper">
