--- a/html and css files/signInVendor.html
+++ b/html and css files/signInVendor.html
@@ -31,6 +31,7 @@
           <div class="formWwrap">
             <div class="inputWrap">
               <!-- Email Address -->
+
               <input
                 type="text"
                 placeholder="Email Address"
@@ -45,6 +46,7 @@
                 id="password"
                 required
               />
+              <span class="togglepwd">&#x1f441;</span>
               <p>Forget password?</p>
             </div>
             <div class="iconWrapper">
