--- a/html and css files/signUpVendor.html
+++ b/html and css files/signUpVendor.html
@@ -30,6 +30,7 @@
         <div class="formWwrap">
           <div class="inputWrap">
             <!-- full name -->
+            <input type="hidden" name="role" value="provider" />
             <input
               type="text"
               name=""
@@ -62,6 +63,7 @@
               id="password"
               required
             />
+            <span class="togglepwd">&#x1f441;</span>
             <input
               type="password"
               name=""
@@ -69,6 +71,7 @@
               placeholder="Confirm Password"
               required
             />
+            <span class="togglepwd2">&#x1f441;</span>
           </div>
           <div class="iconWrapper">
             <figure>
