--- a/html and css files/vendorDashboard2.html
+++ b/html and css files/vendorDashboard2.html
@@ -45,7 +45,12 @@
         </nav>
       </div>
       <!-- Main -->
-      <main class="main"></main>
+      <main class="main">
+        <div class="elegantCoSection"></div>
+        <div class="photoGallery"></div>
+      </main>
+
+      <!-- Footer -->
       <footer>
         <figure>
           <img src="../EMS assets/bigPicFooter.svg" alt="" />
