--- a/html and css files/vendorDashboard.html
+++ b/html and css files/vendorDashboard.html
@@ -41,7 +41,7 @@
               </figure>
             </ul>
             <div class="profileClicked d-None">
-              <p><a href="./vendorDashboard2.html"> Dashboard</a></p>
+              <p><a href="#"> Dashboard</a></p>
               <p><a href="#">Settings</a></p>
               <p><a href="../index.html">Log Out</a></p>
             </div>
