--- a/html and css files/vendorDashboard2.html
+++ b/html and css files/vendorDashboard2.html
@@ -37,7 +37,7 @@
               </figure>
             </ul>
             <div class="profileClicked d-None">
-              <p><a href="#"> Dashboard</a></p>
+              <!-- <p><a href="#"> Dashboard</a></p> -->
               <p><a href="#">Settings</a></p>
               <p><a href="../index.html">Log Out</a></p>
             </div>
@@ -46,8 +46,107 @@
       </div>
       <!-- Main -->
       <main class="main">
-        <div class="elegantCoSection"></div>
+        <div class="elegantCoSection">
+          <p>category >> wedding corporate Events parties & Celebrations</p>
+          <div class="ElegantWeddingtext-star">
+            <h1>Elegant weddings Co.</h1>
+            <sub>
+              (5.0)
+              <figure><img src="../EMS assets/starred.svg" alt="" /></figure>
+            </sub>
+          </div>
+          <div class="rayfieldIcon">
+            <figure><img src="../EMS assets/locationSvg.svg" alt="" /></figure>
+            <p>Ray-field</p>
+          </div>
+          <div class="messageFav">
+            <div class="iconMessage">
+              <a href="#">
+                <figure>
+                  <img src="../EMS assets/message-text-white.svg" alt="" />
+                </figure>
+                <h3>Message</h3>
+              </a>
+            </div>
+            <div class="favz">
+              <figure>
+                <img src="../EMS assets/heartsFavorites.svg" alt="" />
+              </figure>
+              <h3>Add to Favourites</h3>
+            </div>
+          </div>
+          <!-- vendor details -->
+          <div class="eventPlannerDetails">
+            <!-- vendor pDescritpion -->
+            <div class="eventPlannerDescription">
+              <h1>Event Planner's Description</h1>
+              <p>
+                Elegant Weddings Co. is your premier destination for crafting
+                exquisite weddings that reflect your unique style and vision.
+                With meticulous attention to detail and a passion for
+                perfection, we transform your dreams into reality, ensuring
+                every moment is filled with love, sophistication, and timeless
+                elegance. From intimate ceremonies in picturesque gardens to
+                grand receptions in luxurious ballrooms, we specialize in
+                creating unforgettable experiences tailored to your preferences.
+                Our experienced team of wedding planners works closely with you
+                every step of the way, offering personalized guidance, creative
+                inspiration, and seamless coordination. Whether you envision a
+                romantic fairytale wedding or a modern chic affair, we bring
+                your vision to life with unparalleled expertise and dedication.
+                Let us handle the logistics while you focus on cherishing every
+                precious moment with your loved ones. At Elegant Weddings Co.,
+                we believe your wedding day should be as unique and
+                extraordinary as your love story. Let us make your wedding
+                dreams come true.
+              </p>
+            </div>
+            <!--  -->
+            <div class="vendorCalendar">
+              <div class="Occupied">
+                <h3>Occupied</h3>
+                <p>1st March - 7th March</p>
+              </div>
+              <!--  -->
+              <div class="available">
+                <h3>Available</h3>
+                <p>8th March - 20th March</p>
+              </div>
+            </div>
+            <!--  -->
+            <div class="rateReview">
+              <h3>Rate and write a review</h3>
+              <form>
+                <label for="">Title of your Review</label>
+                <input
+                  type="text"
+                  name=""
+                  id=""
+                  placeholder="Summarize your opinion or highlight an interesting detail"
+                />
+                <label for="">Your Review</label>
+                <textarea name="" id="" cols="30" rows="10"></textarea>
+              </form>
+              <button type="submit">Submit your Review</button>
+            </div>
+            <!--  -->
+            <div>
+              <p>
+                Cadence Connect Directory/ Find A Vendor section is NOT an
+                endorsement of any of the vendors listed. It is simply for
+                informationational purposes. Cadence Connect and its affiliates
+                will not be liable for any losses, injuries or damages that may
+                arise in the relationship between an individual, group or
+                organization and any of the vendors listed.
+              </p>
+            </div>
+          </div>
+        </div>
+        <!-- Section photoGallery -->
         <div class="photoGallery"></div>
+        <figure class="figure">
+          <img src="../EMS assets/addNavigateButton.svg" alt="" />
+        </figure>
       </main>
 
       <!-- Footer -->
